Added some CPS2 Boss Hacks

--- a/README
+++ b/README
@@ -145,3 +145,10 @@ World Heroes 2
 World Heroes 2 Jet
 World Heroes Perfect
 Warriors of Fate
+
+mshh-bosshack.fs - Marvel Super Heroes (951117 Hispanic) Yumeji Boss Hack
+mshvsfj-bosshack - Marvel Super Heroes vs Street Fighter (970707 Japan) Yumeji Boss Hack
+mvscu-bosshack.fs - Marvel vs Capcom (980123 USA) Yumeji Boss Hack
+sfzj-bosshack.fs - Street Fighter Alpha (950727 Japan) Yumeji Boss Hack
+vampj-bosshack.fs - Darkstalkers - The Night Warriors (940705 Japan) Yumeji Boss Hack
+xmcotaj1-bosshack.fs - X-Men - Children of the Atom (941219 Japan) Yumeji Boss hack
